--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "LatexModules"]
-	path = LatexModules
+[submodule "Documentation/LatexModules"]
+	path = Documentation/LatexModules
 	url = git@github.com:Limro/LatexModules.git
